# scenedeck

./: .gitignore  AGENT_LOG.md  ALTERNATIVES.jsonl  Cargo.toml  MEMORY.md  PLAN.md  README.md  REFACTOR_FINDINGS.md  SCORES.jsonl  build.rs  cliff.toml  deny.toml
.github/workflows/: ci.yml  release.yml  snap.yml
assets/: scenedeck.css
data/: io.scenedeck.app.desktop  io.scenedeck.app.gschema.xml  io.scenedeck.app.metainfo.xml
docs/: architecture.md  codebase-overview.md  configuration.md  custom-themes.md  developer-guide.md  improvement-roadmap.md  index.md  manual-test-plan.md  manual-test-runs.md  obs-websocket.md  theme-css-reference.md  user-guide.md
examples/themes/: high-contrast-custom.css  my-custom-theme.css  streaming-red.css
i18n/de/: scenedeck.ftl
i18n/de-CH/: scenedeck.ftl
i18n/en/: scenedeck.ftl
i18n/es/: scenedeck.ftl
i18n/it/: scenedeck.ftl
i18n/pl/: scenedeck.ftl
i18n/pt-PT/: scenedeck.ftl
i18n/uk/: scenedeck.ftl
packaging/appimage/: AppRun
packaging/flatpak/: README.md  io.scenedeck.app.yml
resources/: scenedeck.gresource.xml
resources/themes/: adwaita-default-dark.css  adwaita-default-light.css  dracula-inspired-dark.css  dracula-inspired-light.css  high-contrast-dark.css  high-contrast-light.css  nord-dark.css  nord-light.css  obsidian-dark.css  obsidian-light.css  scenedeck-dark-dark.css  scenedeck-dark-light.css  scenedeck-light-dark.css  scenedeck-light-light.css  solarized-dark-dark.css  solarized-dark-light.css  (+6 more)
snap/: rust-toolchain.toml  snapcraft.yaml
src/: app.rs  app_info.rs  lib.rs  main.rs
(+57 files in other folders)
