[package]
name = "scenedeck"
version = "0.1.5"
edition = "2021"
license = "MIT"

[dependencies]
adw     = { package = "libadwaita", version = "0.7", features = ["v1_4"] }
gtk4    = { package = "gtk4",       version = "0.9" }
gio     = "0.20"
glib    = "0.20"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1"
tracing   = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
obws         = { version = "0.15", features = ["events"] }
futures-util = "0.3"
# Pure-Rust secret-service backend (zbus) — no system libdbus dependency.
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
